Thu Aug  6 16:55:45 MEST 1998 Sven Neumann <sven@gimp.org>:

	* plug-ins/script-fu/script-fu-enums.h
        * plug-ins/script-fu/script-fu.c
        * plug-ins/script-fu/script-fu-scripts.c: New ScriptFu argument type
        SF-ADJUSTMENT: You can have sliders and spin-buttons in the dialog.

	* plug-ins/script-fu/scripts/test-sphere.scm: Simple script to show
	and test the new interface.

Wed Aug  5 16:29:05 PDT 1998 Manish Singh <yosh@gimp.org>

	* initial merge of the internationalization stuff. It's still
	broken in a couple places, so you're probably better off running
	configure with --disable-nls (gimp-mgomulin-980727-0)

Wed Aug  5 23:31:54 MEST 1998 Sven Neumann <sven@gimp.org>

	* plug-ins/script-fu/scripts/*.scm (well, almost): Changed all
	scripts to make use of the new SF-STRING argument type where
	appropriate.

Wed Aug  5 21:39:59 MEST 1998 Sven Neumann <sven@gimp.org>

	* plug-ins/script-fu/script-fu-enums.h
	* plug-ins/script-fu/script-fu.c
	* plug-ins/script-fu/script-fu-scripts.c: New ScriptFu argument type
	SF-STRING: Never have to add those damned quotes again... More types
	to follow soon.	 

Wed Aug  5 14:32:51 MEST 1998 Sven Neumann <sven@gimp.org>

	* gimprc.in
	* app/commands.[ch]
	* app/gdisplay.[ch]
	* app/gimprc.[ch]
	* app/interface.c
	* app/menus.c
	* app/plug_in.c
	* app/preferences_dialog.c: The statusbar can now be switched off
	like the rulers. Screen estate purists can make this the default 
	behaviour in their gimprc ;-)
 
1998-08-03  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* app/gradient.c: Fixed typo (sinuosidal -> sinusoidal).

Sun Aug  2 22:34:43 MEST 1998 Sven Neumann <sven@gimp.org>

	* app/gdisplay.c: Tweaked and applied a patch from Daniel Egger 
	(gimp-egger-980704). Update the statusbar when converting the
	image to another basetype.

Sun Aug  2 21:00:04 MEST 1998 Sven Neumann <sven@gimp.org>

	* plug-ins/script-fu/script-fu-scripts.c: Applied a patch from 
	Simon.Budig@unix-ag.org (gimp-simon-220598-0).