@@ -335,6 +335,7 @@ LDADD = \
 	$(top_builddir)/libgimp/libgimpi.a	\
 	$(GTK_LIBS)				\
 	$(THREAD_LIBS)				\
+	$(INTLLIBS)				\
 	-lc
 
 DEPS = \
