@@ -1,4 +1,12 @@
-Thu Aug  6 16:55:45 MEST 1998 Sven Neumann <sven@gimp.org>:
+Thu Aug  6 15:12:16 PDT 1998 Manish Singh <yosh@gimp.org>
+
+	* acinclude.m4: for people without the gettext macros
+
+	* configure.in: don't explicitly link files
+
+	* app/Makefile.am: ad INTLLIBS to the link line
+
+Thu Aug  6 16:55:45 MEST 1998 Sven Neumann <sven@gimp.org>
 
 	* plug-ins/script-fu/script-fu-enums.h
         * plug-ins/script-fu/script-fu.c
